<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.meena.myproject.GCD"
    tools:showIn="@layout/activity_gcd">

    <Button
        android:id="@+id/gcd_back"
        android:layout_width="353dp"
        android:layout_height="69dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="46dp"
        android:text="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gcd_solve"
        app:layout_constraintHorizontal_bias="0.533" />

    <Button
        android:id="@+id/gcd_videos"
        android:layout_width="353dp"
        android:layout_height="69dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="45dp"
        android:text="@string/str_gcd_videos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gcd_solve"
        android:layout_width="353dp"
        android:layout_height="69dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="45dp"
        android:text="@string/str_find_GCD"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gcd_videos" />

</android.support.constraint.ConstraintLayout>
