<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.meena.myproject.PolyCalculate"
    tools:showIn="@layout/activity_poly_calculate">

    <TextView
        android:id="@+id/first_polynomial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="87dp"
        android:text="@string/input_poly1"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_poly2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/input_poly2"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_polynomial" />

    <EditText
        android:id="@+id/editPoly1"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="polynomial"
        android:inputType="text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/first_polynomial"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="polynomial"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@+id/input_poly2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/editPoly1" />

    <Button
        android:id="@+id/poly_calculate"
        android:layout_width="339dp"
        android:layout_height="51dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/str_poly_calc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="258dp"
        app:layout_constraintHorizontal_bias="0.517" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="366dp" />
</android.support.constraint.ConstraintLayout>
